<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logyca.LoginActivity$PlaceholderFragment" 
    android:background="@color/white" >

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
 
        <!--  Header  Starts-->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:orientation="horizontal" >

            <!-- Logo Start-->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:maxWidth="@dimen/activity_horizontal_margin"
                android:src="@drawable/logo" 
                android:focusable="true"
                android:focusableInTouchMode="true"/>

                <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->

        <!-- Registration Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="10dip" >

          <!--  Email Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/text_email"
              android:textColor="#372c24"
              android:textSize="20sp" />

          <EditText
              android:id="@+id/email_text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="5dip"
              android:inputType="textEmailAddress"
              android:singleLine="true" />

          <!--  Password Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/text_password"
              android:textColor="#372c24"
              android:textSize="20sp" />

          <EditText
              android:id="@+id/password_text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:inputType="textPassword"
              android:singleLine="true" />

          <!-- Login button -->

          <Button
              android:id="@+id/btnLogin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="6dp"
              android:layout_marginTop="10dip"
              android:text="@string/btn_text_login"
              android:textSize="20sp"
              android:onClick="selfDestruct"  />

          <!-- Link to Registration Screen -->

          <com.facebook.widget.LoginButton
              android:id="@+id/btnFacebook"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:text="@string/btn_text_login_facebook"
              android:textSize="20sp" />

          <Button
              android:id="@+id/btnRegister"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="40dp"
              android:layout_marginTop="10dp"
              android:gravity="center"
              android:onClick="selfDestruct"
              android:text="@string/signup_text"
              android:textColor="@color/orange"
              android:textColorHint="@color/light_blue"
              android:textSize="23sp" />
 
        </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>

</ScrollView>
